Draft: Cleanup vocabulary

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -111,7 +111,7 @@ You can now specify the level of access a user has by restricting the ability to
 
 - Parallel command loading has been implemented for Cisco Meraki. This will significantly speed up discovery.
 - VMware NSX-T -- Added support for E2E PathLookup with evaluation of DFW and Gateway Firewall Policies.
-- Forcepoint NGFW -- Added support of basic discovery in firewall/vpn mode (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Forcepoint NGFW -- Added support of basic discovery in firewall/VPN mode (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Cisco -- Added support for collecting FabricPath data.
 - Discovery bandwidth limit can be set up to 100Mb/s in UI.
 - The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team for guidance.
