--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -25,7 +25,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 - Resolved an issue with F5 where interface IP addresses were not correctly interpreted.
 - Resolved some FS parsing issues following initial support in `6.2.1`.
-- Improved PBR representation and resolved an issue with set-vrf not correctly interpreted.
+- Improved PBR representation and resolved an issue with `set-vrf` not correctly interpreted.
 
 ### Network Discovery
 
