--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -184,7 +184,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Cisco IOS - `tasks/deviceConfig/current` - allow empty configuration
   when device return it
 - Cisco IOS + IOS-XE - fixed false-positive error detection in command
-  `show dot1x all details` in case of Tacacs session expiration.
+  `show dot1x all details` in case of TACACS session expiration.
 - Cisco IOS cat9300 - `commands/cisco/vxlan/nveVni` - fixed parsing for
   new command output format
 - Cisco IOS-XE - added parsing of another format of `show env all` and
@@ -204,7 +204,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Cisco Meraki - API v0 input validation updated for endpoint
   `switch-ports/get-device-switch-port-statuses`
 - Cisco Meraki - `commands/cisco/_meraki/v0/devices/switch/ports` -
-  Unexpected stp guard value: root guard.
+  Unexpected STP guard value: root guard.
 - Cisco Meraki - fixed parsing of Meraki device clients.
 - Cisco Nexus - `commands/cisco/mac` - Added support for FabricPath MAC
   entries
@@ -234,7 +234,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Extreme XOS - fixed parsing of port names for `show stpd <stpdDomain> ports counters` command
 - Extreme Enterasys - `tasks/portChannel` - port state fix
 - Extreme XOS - Fixed parsing of command `show ip-security
-  dhcp-snooping vlan` to allow more or none ports in Trusted ports
+dhcp-snooping vlan` to allow more or none ports in Trusted ports
   section
 - Extreme XOS - fixed parsing of command `show ports transceiver information detail` to allow transceivers without any statistics
 - F5 - `commands/f5/\_big-ip/listNetSelf` - add support of ipv6
@@ -319,13 +319,13 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Palo Alto, F5 clusters - Fix for establishing routing protocol edges
 - Palo Alto - fixed parsing for the routing table.
 - Palo Alto 5200 - `commands/paloalto/showConfigMerged` - fix parsing,
-  when vsys has no configuration
+  when VSYS has no configuration
 - Pathlookup - STP edge between switch and firewall in a cluster with
   virtual mac fix
 - Routing table recursive lookup for VXLAN and other forwarding
   properties fix
 - STP topology fix for port role master
-- Versa VOS - Fixed BGP task mapping for cases total received Pfx is
+- Versa VOS - Fixed BGP task mapping for cases total received PFX is
   not available.
 - Versa VOS - fixed mapping of API endpoint
   `/vnms/dashboard/appliance/<appliance>/live?command=ospf/interface/int-extensive`
