--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
@@ -115,7 +115,7 @@ OVA SHA256SUM: DD5F1F0F701974CC8367336DDB7B3877CAAF3BD6DC114BB37C178CD104CA8BA7
 - Arista EOS - fixed parsing of `show ip virtual-router` for another
   output format
 - Arista EOS - fixed parsing of interface ranges in command `show ip access-lists summary`
-- Arista EOS - fixed parsing of logging and snmp information in
+- Arista EOS - fixed parsing of logging and SNMP information in
   command `show running-config`
 - Check Point Gaia - fixed missing zone firewall data for VSX clusters
 - Check Point Gaia - fixed version detection for OS versions
