--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -82,7 +82,7 @@ OVA SHA256SUM: 2D64A41DF78D3965F70AD80807D788FD12E0F7A1DDCF39A6B23911BF72A8311D
 
 ### Bug Fixes
 
-- Palo Alto - Fixed discovery of multi vsys firewalls.
+- Palo Alto - Fixed discovery of multi VSYS firewalls.
 - Mikrotik RouterOS - Fixed parsing of MTU in case it has value "auto"
   in output of command `/interface print detail`
 - Fortinet FortiGate - Fixed wrongly assigned MAC address to link
@@ -182,7 +182,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   - Technology / Load-balancing / F5 Partitions
 
 - Added new table Technology/ Port channels / MLAG / Cisco VPC
-- Extreme Xos - Added POE support
+- ExtremeXOS - Added POE support
 
 ### Improvements
 
@@ -238,7 +238,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   previously shown. Fixed now
 - Arista EOS - Fix parsing of the routing table.
 - Arista EOS - fix subinterfaces parsing from command `show ip ospf neighbor detail`
-- Arista Eos- Fix parsing of command `show lldp neighbors detail`.
+- Arista EOS - Fix parsing of command `show lldp neighbors detail`.
 - AWS - Fix mapping of `aws/_ec2/describeRouteTables`
 - AWS - Fix parsing for a command that shows tunnelOptions which can
   be empty.
@@ -256,7 +256,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   `show cluster members interfaces all`
 - Cisco - fixed PID parsing for nonstandard Cisco transceivers from
   command `show inventory`
-- Cisco - Fix duplicate entries for lldp and cdp discovery.
+- Cisco - Fix duplicate entries for LLDP and CDP discovery.
 - Cisco - Fix parsing of nexthop list from routing table
 - Cisco - IOS/IOS-XE fixed parsing of `show ip mroute count` command
 - Cisco ASA - the discovery of firewall contexts fixed
@@ -289,7 +289,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - Cisco NX-OS - `show vlan brief` parsing updated to handle error
   message displayed due to Cisco bug CSCvr88898
 - Cisco NX-OS - Fix parsing of command `show password strength-check`
-- Cisco NX-OS - Fix parsing of ospf state for the command `show ip ospf interface vrf all`.
+- Cisco NX-OS - Fix parsing of OSPF state for the command `show ip ospf interface vrf all`.
 - Cisco NX-OS - Fixed parsing for negative DHCP snooping values in
   command `show ip dhcp snooping statistics`, probably bug on device.
 - Cisco NX-OS - fixed parsing of command `show mac address-table` that
