--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
@@ -38,7 +38,7 @@ OVA SHA256SUM: 8D773667434B4C27C9C199E84784312864E01C08D51DAA158B7C07C9B99BFD8F
 - HP ArubaCX - Add parsing of reload reason
 - HP ArubaCX - added support for parsing of interface load.
 - Juniper JunOS - added missing community string in table
-  technology/management/snmp/trap-hosts.
+  `technology/management/snmp/trap-hosts`.
 - Juniper JunOS - `commands/juniper/\_junos/configurationDisplaySet` -
   add parsing for firewall tcp-established `from` action
 
