NIM-12075 Introduce changes caused by API devices in sysDevInventory

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -18,3 +18,8 @@ tags: ["draft"]
   - PAN-OS -- Added support for
     - [IP wildcard](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-admin/policy/policy-objects) object in Zone Firewall.
     - [DHCP server](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-web-interface-help/network/network-dhcp/dhcp-server).
+
+### Important Product Changes
+
+- API-discovered devices are now available in the global Device Attributes settings via Serial number search autocomplete.
+- A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter. 
