--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -30,6 +30,23 @@ description: In this section, you can find the release notes for v6.5 releases.
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance please contact your Solution Architect.
 
+## v6.5.2 (GA, December 04th, 2023)
+
+```
+SHA256 (ipfabric-update-6-5-2+0.tar.gz.sig) = f0f2a6404e106d5406f781d815ff59584b90077571b80d9aa0d7b584536deaab
+MD5 (ipfabric-update-6-5-2+0.tar.gz.sig) = 829238ee70286b0fbf4a1c610772f847
+SHA256 (ipfabric-6-5-2+0.qcow2) = b18b2dda87f0c80203928a4e774a0630c922bfd14a270315d013f352ae5f5775
+MD5 (ipfabric-6-5-2+0.qcow2) = 6ffc5e209fdd364b071eed67a0edfa17
+SHA256 (ipfabric-6-5-2+0.ova) = afb6dd08c4dfb8f727da05f3cf187ce86f31ce4a2bb792822d66c92060f77ec3
+MD5 (ipfabric-6-5-2+0.ova) = 21b5634e141149deb607a84b89035c78
+```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.5.2](../release_notes_low-level/6.x/6.5.x/6.5.2.md).
+
+### Bug Fixes
+
+- LDAP is now working with local authentication enabled
+
 ## v6.5.1 (November 14th, 2023)
 
 ```
