NIM-13283: Release note

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -24,3 +24,4 @@ tags: ["draft"]
 - API-discovered devices are now available in the global Device Attributes settings via Serial number search autocomplete.
 - A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter. 
 - API worker maximum memory usage is now limited to 8GB (instead of 4GB) to minimize possibility out of memory crash because of heavy calculations operations.
+- Cisco FMC API client can detect refresh token expiration and re-authenticate when it happens.
