--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -18,6 +18,8 @@ tags: ["draft"]
   - PAN-OS -- Added support for
     - [IP wildcard](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-admin/policy/policy-objects) object in Zone Firewall.
     - [DHCP server](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-web-interface-help/network/network-dhcp/dhcp-server).
+- Cisco
+  - FMC -- Added support for Device Groups
 
 ### Important Product Changes
 
