NIM-12833 6.7 RN - Document added Viptela Service Chaining

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -17,3 +17,8 @@ tags: ["draft"]
 #### Breaking Change in Intent Verification Checks
 
 Inconsistent behavior has been identified in the comparison of empty values in number columns between table data and intent verification checks. Empty values are now treated as the smallest possible value when compared to any number, both in tables and in intent verification checks.
+
+### Network Discovery
+
+- Cisco
+  - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
