Fix sFlow spelling

--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -300,10 +300,8 @@ vrrp detail`
   specific banner configured.
 - Cisco SG - fixed interface parsing in ARP table
 - Cisco SG - fixed LLDP neighbors detection in multiline output
-- Cisco SG - fixed parsing of different output for command `show sflow
-configuration`
-- Cisco SG - fixed parsing of different output for command `show
-spanning-tree detail`
+- Cisco SG - fixed parsing of different output for command `show sflow configuration`
+- Cisco SG - fixed parsing of different output for command `show spanning-tree detail`
 - Cisco SG 500 - fixed STP interface - vlan mapping (slash format)
 - Cisco XE - fixed xSR platforms identification
 - Cisco XR - fix parsing for command `show version` (caused empty
@@ -548,9 +546,9 @@ mpls switching`
 trunks`
 - HP Comware - fixed parsing of different output for command `display
 device manuinfo`
-- Huawei - Fixed ambiguous commands for arp, dhcp snooping, sflow,
+- Huawei - Fixed ambiguous commands for ARP, DHCP snooping, sFlow,
   port-mirroring
-- Huawei - MPLS to RIB transport label mapping - 3 implicit null label
+- Huawei - MPLS to RIB transport label mapping -- 3 implicit null label
   removed
 - Juniper JunOS - fixed parsing of different output for command `show
 vlans detail`
@@ -2885,7 +2883,7 @@ configuration firewall`
   label fixed parsing
 - Juniper JunOS - fixed parsing issue for command `show vlans
 detail` - VPLS VLANs aren't supported
-- Juniper JunOS - fixed parsing for command `show sflow` when SFlow
+- Juniper JunOS - fixed parsing for command `show sflow` when sFlow
   isn't configured
 - Juniper JunOS - fixed parsing of different output for command `show
 vrrp detail`
