NIM-13113 6.7 RN - Document Cisco FMC's auto-retry for responses with empty body and status 200

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -14,6 +14,8 @@ tags: ["draft"]
 
 ### Important Product Changes
 
+- Cisco FMC client re-sends GET request once when it receives 200 OK response with empty data.
+
 #### Breaking Change in Intent Verification Checks
 
 Inconsistent behavior has been identified in the comparison of empty values in number columns between table data and intent verification checks. Empty values are now treated as the smallest possible value when compared to any number, both in tables and in intent verification checks.
