--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -14,7 +14,7 @@ tags: ["draft"]
 
 ### Important Product Changes
 
-- Cisco FMC client re-sends GET request once when it receives 200 OK response with empty data.
+- Cisco FMC client re-sends `GET` request once when it receives `200 OK` response with empty body.
 
 #### Breaking Change in Intent Verification Checks
 
