ST-247 Update screenshots in 'Support'

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -54,7 +54,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
   only selected nodes)
 - Intent-based networking has never been easier, the results are shown
   in the context of visualized devices.
-- Define your own preset, change colour or labels for any protocol
+- Define your own preset, change color or labels for any protocol
 - Use API to share visualizations with your wider ecosystem
 - Highlight device neighbour relationship
 - Share the view with your team
@@ -73,7 +73,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - New packet inspector - understand all forwarding decisions at every
   layer
 - Reworked security model - visualized in a tree
-- Change path lookup edge colours according to packet header
+- Change path lookup edge colors according to packet header
   priorities
 
 #### Other improvements
