ST-247 Update IP Fabric logo in discovery schema in 'How CLI Discovery Works'; apply small improvements

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -57,7 +57,7 @@ OVA SHA256SUM: 2D64A41DF78D3965F70AD80807D788FD12E0F7A1DDCF39A6B23911BF72A8311D
 - Pathlookup - Routing with OIDs, skip checking underlying L2 path
 - Fix parsing Virtual Servers and Pool members with routing domains
   and `any` ports.
-- VMWare NSX-T -- fixed mapping of empty mac-table
+- VMware NSX-T -- fixed mapping of empty mac-table
 - Error when opening Intent Rule verification in End Of Life
   Milestones page fix
 - Arista -- fixed parsing of platform
