DOS-1396 6.7 RN - Document 'nimpee (start|stop)prod' replacement

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -12,6 +12,14 @@ tags: ["draft"]
 
 ## v6.7.0 (UNRELEASED)
 
+### Replacement of `nimpee startprod` and `nimpee stopprod` commands
+
+- The `nimpee` script (`sys-nimpee.sh`) used to manage the IP Fabric services
+  has been replaced with the `ipf-appliance` service group. You can use:
+  - `systemctl start ipf-appliance` instead of `nimpee startprod`
+  - `systemctl stop ipf-appliance` instead of `nimpee stoppprod`
+- We want to leverage system tooling instead of custom scripts.
+
 ### Important Product Changes
 
 - Cisco FMC client re-sends `GET` request once when it receives `200 OK` response with empty body.
