ST-158: Add additional vale rules

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -47,7 +47,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 
 ### Improvements
 
-#### The visualization part of the application was fully rewritten to boost performance and capabilities.
+#### The visualization part of the application was fully rewritten to boost performance and capabilities
 
 - The brand new UI
 - Visualize your topology with a range of built-in layouts (or layout
@@ -62,7 +62,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Enhanced search capabilities
 - Collapse or hide devices
 
-#### The path lookup simulation was also completely rewritten to packet-based path-lookup simulation.
+#### The path lookup simulation was also completely rewritten to packet-based path-lookup simulation
 
 - The unicast simulation also supports subnets now
 - Improved ACI topology simulation
