ST-288 6.6 RN - Document 'Discovery Snapshot' section refresh issues with webhook enabled

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -12,7 +12,7 @@ tags: ["draft"]
 
 ## v6.6.0 (UNRELEASED)
 
-### Network Discovery
+### Network discovery
 
 - Palo Alto
   - PAN-OS -- Added support for
@@ -21,9 +21,26 @@ tags: ["draft"]
 - Cisco
   - FMC -- Added support for Device Groups
 
-### Important Product Changes
+### Important product changes
 
 - API-discovered devices are now available in the global Device Attributes settings via Serial number search autocomplete.
 - A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter. 
 - API worker maximum memory usage is now limited to 8GB (instead of 4GB) to minimize possibility out of memory crash because of heavy calculations operations.
 - Cisco FMC API client can detect refresh token expiration and re-authenticate when it happens.
+
+### Known issues
+
+#### State refresh issues in `Discovery Snapshot` section with webhook enabled
+
+When a webhook is configured and enabled in **Settings --> Integration -->
+Webhooks**, a newly started discovery won't show progress until you switch to
+another menu section (for example **Dashboard**) and back to **Discovery
+Snapshot** (or until you refresh the page).
+
+| With webhook -- incorrect behavior | Without webhook -- correct behavior |
+| :--------------------------------- | :---------------------------------- |
+| ![Incorrect](6.6_with_webhook.gif) | ![Correct](6.6_without_webhook.gif) |
+
+You may also encounter that after deleting a snapshot, it is still being shown
+among `Loaded/Unloaded Snapshots` until you switch to another menu section and
+back (or until you refresh the page).
