--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -14,6 +14,8 @@ tags: ["draft"]
 
 ### Network discovery
 
+- Fortinet
+  - FortiGate -- Added initial support for Aggregate IPsec tunnels with limited support in path-lookup -- evaluation of security rules is not supported yet.
 - Palo Alto
   - PAN-OS -- Added support for
     - [IP wildcard](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-admin/policy/policy-objects) object in Zone Firewall.
