NIM-13347: Bugfix release note

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -29,6 +29,7 @@ tags: ["draft"]
 - A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter. 
 - API worker maximum memory usage is now limited to 8GB (instead of 4GB) to minimize possibility out of memory crash because of heavy calculations operations.
 - Cisco FMC API client can detect refresh token expiration and re-authenticate when it happens.
+- Only Force Point API client will repeat requests which failed with recoverable network errors (was previously enabled for all client). Configuration of number of requests, timeouts etc. is hard-coded as described in previous release notes. We are working on runtime configuration, which would enable tweaking those with IP Fabric Support assistance.
 
 ### Known issues
 
