NIM-11042 add Citrix ADC support information

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -27,10 +27,18 @@ tags: ["draft"]
 ### Important product changes
 
 - API-discovered devices are now available in the global Device Attributes settings via Serial number search autocomplete.
-- A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter. 
+- A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter.
 - API worker maximum memory usage is now limited to 8GB (instead of 4GB) to minimize possibility out of memory crash because of heavy calculations operations.
 - Cisco FMC API client can detect refresh token expiration and re-authenticate when it happens.
 - Only Force Point API client will repeat requests which failed with recoverable network errors (was previously enabled for all client). Configuration of number of requests, timeouts etc. is hard-coded as described in previous release notes. We are working on runtime configuration, which would enable tweaking those with IP Fabric Support assistance.
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. If you are interested in trying them out, please contact our Support or Solution Architect team and we will gladly help you with enabling these features.
+
+- Citrix ADC
+  - Basic discovery support was added as PoC and needs to be enabled manually
+    (`ENABLE_DISCOVERY_DEVICES_CITRIX`).
 
 ### Known issues
 
