--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -32,3 +32,7 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 
 - Cisco
   - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
+
+### Other Minor Changes
+
+- MAC addresses starting with `649EF3` are no longer incorrectly detected as IP Phones but as network devices.
