Add release notes for 6.7 (juniper mist optimization, and banner parsing support).

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -23,6 +23,11 @@ tags: ["draft"]
     - Discovery of Panorama in management and log collector modes.
 - Cisco
   - FMC -- Added support for Device Groups
+  - All families -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
+- Arista
+  - EOS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
+- Palo Alto
+  - PAN-OS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
 
 ### Important product changes
 
