--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -32,6 +32,9 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 
 - Cisco
   - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
+- Juniper
+  - Mist -- We have improved the discovery speed for large networks. Instead of fetching data from Redis cache for each device and task, we now access the data directly from memory. This significantly eliminates the loading time.
+- FS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
 
 ### Other Minor Changes
 
