ST-289 6.6 RN - Document issue with 'Network Analysis Report' not showing all loaded snapshots

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -61,3 +61,14 @@ Snapshot** (or until you refresh the page).
 You may also encounter that after deleting a snapshot, it is still being shown
 among `Loaded/Unloaded Snapshots` until you switch to another menu section and
 back (or until you refresh the page).
+
+#### `Network Analysis Report` table not showing all loaded snapshots
+
+**Reports --> Network Analysis Report** should allow you to download `Network
+Analysis Report` documents for each loaded snapshot. However, on version `6.6`
+(and a few previous major releases), it does not show all loaded snapshots.
+
+This will be addressed in the upcoming `6.7` release.
+
+A workaround is to reboot the IP Fabric appliance or just restart the IP Fabric
+API service (with `sudo systemctl restart nimpee-api`).
