Update checksums for 6.6.3

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -10,7 +10,16 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
-## v6.6.0 (UNRELEASED)
+## v6.6.3 (January 29th, 2024)
+
+```
+SHA256 (ipfabric-update-6-6-3+0.tar.gz.sig) = 467a1a5147f9a061b070d3c04ad773ab8d4db85ccb3df55312fb50bac708b06c
+MD5 (ipfabric-update-6-6-3+0.tar.gz.sig) = e9d275e4bb60dedd5d2c062a4e5f0847
+SHA256 (ipfabric-6-6-3+0.qcow2) = c285d5e3ce51c90634d8b7fd8529e97a760ace2de25e087a3c616baf19d6b202
+MD5 (ipfabric-6-6-3+0.qcow2) = 8cfe67f86af443bee7b1609bffbd6bc5
+SHA256 (ipfabric-6-6-3+0.ova) = 7b351e5ce065d21f2665a54862d8b9a6894f442200a8a56c7d1c6bf756c8996c
+MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
+```
 
 ### Network discovery
 
