--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -40,3 +40,7 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 
 - MAC addresses starting with `649EF3` are no longer incorrectly detected as IP Phones but as network devices.
 - The parameters that were originally hard-coded in vendor API clients, such as timeouts and number of re-sends, can now be configured in situ with the assistance of IP Fabric Support.
+
+### 3rd party updates
+
+- [dex - A federated OpenID Connect provider](https://github.com/dexidp/dex) updated to `2.38.0`
