--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -30,6 +30,7 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 
 ### Network Discovery
 
+- Check Point -- Added support for discovery of firewalls connected to Maestro Orchestrator.
 - Cisco
   - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
 - Juniper
