--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -103,7 +103,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10542` -- Medium -- Check Point - show identity object in policies (without evaluation)
 - `NIM-10558` -- Medium -- New Actions cause error in console
 - `NIM-10560` -- Medium -- NAT Incorectly parsed IP of outgoing interface
-- `NIM-10564` -- Medium -- Advance filter has broken loading of "has color" option
+- `NIM-10564` -- Medium -- Advanced filter has broken loading of "has color" option
 - `NIM-10573` -- Medium -- Manual site separation cannot be applied on Meraki devices when "Routing and switching domain" site separation rule is set
 - `NIM-10598` -- Medium -- Advance filter has broken loading of "dateTime" options
 - `NIM-10606` -- High -- Some operators don't make sense in advance filter or don't work
