--- a/docs/releases/release_notes_low-level/6.x/6.5.x/6.5.2.md
+++ b/docs/releases/release_notes_low-level/6.x/6.5.x/6.5.2.md
@@ -16,7 +16,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-12903` -- Medium -- AQL fix setL2Edge vlan filter
 - `NIM-12911` -- Medium -- Bugfix: commands/azure/virtualHubs (6.3.0-13)
 - `NIM-12912` -- Medium -- Bugfix: commands/azure/vpnSites (6.3.0-13)
-- `NIM-12939` -- Medium -- Fix calling 'show cluster info' command for FTD
+- `NIM-12939` -- Medium -- Fix calling `show cluster info` command for FTD
 - `NIM-12972` -- Medium -- Fix getDeviceList AQL
 - `NIM-12981` -- Highest -- LDAP not working if local authentication is enabled
 - `NIM-12983` -- Medium -- Default values for advanced Vendor API settings not addded
