--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -1,16 +1,14 @@
 ---
 description: In this section, you can find the release notes for v6.6 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.6
 
-!!! danger "Unreleased version"
+--8<-- "snippets/upgrade_version_policy.md"
 
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
+--8<-- "snippets/clear_browser_cache.md"
 
-## v6.6.3 (January 29th, 2024)
+## v6.6.3 (January 29th, 2024; GA)
 
 ```
 SHA256 (ipfabric-update-6-6-3+0.tar.gz.sig) = 467a1a5147f9a061b070d3c04ad773ab8d4db85ccb3df55312fb50bac708b06c
@@ -20,6 +18,28 @@ MD5 (ipfabric-6-6-3+0.qcow2) = 8cfe67f86af443bee7b1609bffbd6bc5
 SHA256 (ipfabric-6-6-3+0.ova) = 7b351e5ce065d21f2665a54862d8b9a6894f442200a8a56c7d1c6bf756c8996c
 MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
 ```
+
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with
+  other snapshots and their lock will be preserved. Therefore, such snapshots
+  won't be deleted by snapshot retention.
+- Upgrade to `v6.6` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor
+  API version for SSO configuration and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` in
+  this file with `v6` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+  ```
+
+  For more information, please refer to the
+  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  If you would like assistance please contact your Solution Architect.
 
 ### Network discovery
 
