--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -42,6 +42,7 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 - MAC addresses starting with `649EF3` are no longer incorrectly detected as IP Phones but as network devices.
 - The parameters that were originally hard-coded in vendor API clients, such as timeouts and number of re-sends, can now be configured in situ with the assistance of IP Fabric Support.
 - Allow dot character (`.`) in username. This is valid for Jumphost settings, SNMP configuration and system backup.
+- Sometimes Cisco FMC doesn't return access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
 
 ### 3rd party updates
 
